--- a/pages/tools.html
+++ b/pages/tools.html
@@ -38,8 +38,8 @@
         <div class="container">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="index.html">
-                        <img src="https://www.gabrielavelitch.com/assets/images/favicon-96x96.png" alt="Mobirise" style="height: 3rem;">
+                    <a href="https://www.gabrielavelitch.com/index.html">
+                        <img src="https://www.gabrielavelitch.com/assets/images/favicon-96x96.png" alt="" style="height: 3rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white text-primary display-4" href="https://www.gabrielavelitch.com/index.html">Gabriela Velitch</a></span>
@@ -53,7 +53,7 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="projects.html">PROJECTS</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="tools.html">TOOLS</a></li></ul>
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/pages/projects.html">PROJECTS</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/pages/tools.html">TOOLS</a></li></ul>
 
 
             </div>
