--- a/pages/tools.html
+++ b/pages/tools.html
@@ -104,7 +104,7 @@
                         </div>
                         <div class="col-12 col-md-5">
                             <div class="img-wrapper">
-                                <img src="https://faust.grame.frassets/images/cycling-74-logo.svg-432x237.png">
+                                <img src="https://www.gabrielavelitch.com/assets/images/cycling-74-logo.svg-432x237.png">
                             </div>
                         </div>
                     </div>
@@ -124,7 +124,7 @@
                         </div>
                         <div class="col-12 col-md-5">
                             <div class="img-wrapper">
-                                <img src="https://faust.grame.frassets/images/logo-faust-simple-bleu-390x390.png">
+                                <img src="https://www.gabrielavelitch.com/assets/images/logo-faust-simple-bleu-390x390.png">
                             </div>
                         </div>
                     </div>
