--- a/pages/maxmsptools.html
+++ b/pages/maxmsptools.html
@@ -8,6 +8,10 @@
   <link rel="shortcut icon" href="https://www.gabrielavelitch.com/assets/images/favicon-96x96.png" type="image/x-icon">
   <meta name="description" content="">
 
+  <style>
+#hide-footer{display: none !important;}
+</style>
+
 
   <title>MaxMSP</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
