--- a/pages/projects/corkino.html
+++ b/pages/projects/corkino.html
@@ -36,11 +36,11 @@
         <div class="container">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="index.html">
-                        <img src="assets/images/favicon-96x96.png" alt="Mobirise" style="height: 3rem;">
+                    <a href="https://www.gabrielavelitch.com/index.html">
+                        <img src="https://www.gabrielavelitch.com/assets/images/favicon-96x96.png" alt="" style="height: 3rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white text-primary display-4" href="index.html">Gabriela Velitch</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white text-primary display-4" href="https://www.gabrielavelitch.com/index.html">Gabriela Velitch</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -85,7 +85,7 @@
             </div>
             <div class="p-0 col-12 col-lg-5 md-pb">
                 <div class="image-wrapper">
-                    <img src="assets/images/corkino-1288x725.jpeg" alt="Mobirise">
+                    <img src="https://www.gabrielavelitch.com/assets/images/corkino-1288x725.jpeg" alt="corkino">
                 </div>
             </div>
         </div>
@@ -194,7 +194,7 @@
             </div>
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-4">
-                    <a href="index.html#header13-1" class="text-primary">© Gabriela Velitch 2022.</a></p>
+                    <a href="https://www.gabrielavelitch.com/index.html#header13-1" class="text-primary">© Gabriela Velitch 2022.</a></p>
             </div>
         </div>
     </div>
