--- a/pages/projects/corkino.html
+++ b/pages/projects/corkino.html
@@ -127,8 +127,8 @@
         <div class="row justify-content-center mt-4">
             <div class="col-12 col-md-8">
                 <ul class="nav nav-tabs mb-4" role="tablist">
-                    <li class="nav-item first mbr-fonts-style"><a class="nav-link mbr-fonts-style show active display-7" role="tab" data-toggle="tab" data-bs-toggle="tab" href="#tabs1-14_tab0" aria-selected="true"><strong>Manual</strong></a></li>
-                    <li class="nav-item"><a class="nav-link mbr-fonts-style active display-7" role="tab" data-toggle="tab" data-bs-toggle="tab" href="#tabs1-14_tab1" aria-selected="true"><strong>Software</strong></a></li>
+                    <li class="nav-item first mbr-fonts-style"><a class="nav-link mbr-fonts-style show active display-7" role="tab" data-toggle="tab" data-bs-toggle="tab" href="https://www.gabrielavelitch.com/pages/projects/#tabs1-14_tab0" aria-selected="true"><strong>Manual</strong></a></li>
+                    <li class="nav-item"><a class="nav-link mbr-fonts-style active display-7" role="tab" data-toggle="tab" data-bs-toggle="tab" href="https://www.gabrielavelitch.com/pages/projects/#tabs1-14_tab1" aria-selected="true"><strong>Software</strong></a></li>
 
 
 
