--- a/pages/projects/corkino.html
+++ b/pages/projects/corkino.html
@@ -72,11 +72,11 @@
                         <p class="mbr-text mbr-fonts-style mb-4 display-7"></p>
                         <div class="mbr-text mbr-fonts-style counter-container display-7">
                             <ul>
-                                <li>Ultra-portable all-in-one MaxMSP controller
-</li><li>Compact, durable design for mobile performers and producers
-</li><li>Based on arduino uno board
-</li><li>Seamlessly integrates 1 to 1 with MaxMSP
-</li><li>USB-powered</li>
+                                <li>Ultra-portable all-in-one MaxMSP controller</li>
+                                <li>Compact, durable design for mobile performers and producers</li>
+                                <li>Based on arduino uno board</li>
+                                <li>Seamlessly integrates 1 to 1 with MaxMSP</li>
+                                <li>USB-powered</li>
                             </ul>
                         </div>
 
@@ -101,10 +101,10 @@
                 <div class="mbr-text mbr-fonts-style display-7">
                     <ul>
                         <li><strong>Hexagonal design&nbsp;</strong>Six channel gains allow you to mix with an all-new hexagonal gain design. Users can change channel-gain functionality: fade clips in and out of the mix; pan instruments to the left, right, or center; raise the level of reverb or other effects to create fluid transitions; open and close filters for lush sweeps: each gain is completely assignable for flexible mixing and mapping options.<strong>&nbsp;</strong></li>
-                        <li><strong>Get On The Grid</strong>&nbsp;<span style="font-size: 1rem;">corkino features an expanded 6 buttons grid that’s built for hands-on exploration: launch clips and create or perform your song from the ground up using 6 responsive triggers. Color lighting provides visual feedback and displays buttons statuses so you can intelligently perform without looking at your computer. Plus, you can use the Shift button to manipulate the scope of the grid.Unique Styles.</span></li><li><span style="font-size: 1rem;"><strong>Seamless Integration</strong>&nbsp;</span>corkino comes pre-mapped to MaxMSP for an instant performance and production setup. When corkino is plugged into your computer, its hardware controls correspond 1 to 1 with MaxMSP’s interface—no additional configuring is required. Whether you are an electronic music artist and MaxMSP is your canvas, a musician using MaxMSP for performance and real-time mixing, or a more traditional musician using MaxMSP on stage or in the studio, you will find the corkino to be the intuitive, powerful instrument that directly links your inspiration with MaxMSP.</li><li><strong>USB Power &amp; Class Compliance</strong> For maximum portability, corkino is powered over USB and supports plug-and-play connectivity. Users can even run multiple corkino in parallel for more versatility.</li><li><strong>Production Content Included</strong> corkino comes packed with a demo version of MaxMSP 8, an infinitely flexible space to create your own interactive software. MaxMSP enables musicians and producers to connect ideas together to create software built around you, in the moment, exploring sound without limits.</li>
-<li>
-</li><span style="font-size: 1rem;">
-</span></li>
+                        <li><strong>Get On The Grid</strong>&nbsp;<span style="font-size: 1rem;">corkino features an expanded 6 buttons grid that’s built for hands-on exploration: launch clips and create or perform your song from the ground up using 6 responsive triggers. Color lighting provides visual feedback and displays buttons statuses so you can intelligently perform without looking at your computer. Plus, you can use the Shift button to manipulate the scope of the grid.Unique Styles.</span></li>
+                        <li><span style="font-size: 1rem;"><strong>Seamless Integration</strong>&nbsp;</span>corkino comes pre-mapped to MaxMSP for an instant performance and production setup. When corkino is plugged into your computer, its hardware controls correspond 1 to 1 with MaxMSP’s interface—no additional configuring is required. Whether you are an electronic music artist and MaxMSP is your canvas, a musician using MaxMSP for performance and real-time mixing, or a more traditional musician using MaxMSP on stage or in the studio, you will find the corkino to be the intuitive, powerful instrument that directly links your inspiration with MaxMSP.</li>
+                        <li><strong>USB Power &amp; Class Compliance</strong> For maximum portability, corkino is powered over USB and supports plug-and-play connectivity. Users can even run multiple corkino in parallel for more versatility.</li>
+                        <li><strong>Production Content Included</strong> corkino comes packed with a demo version of MaxMSP 8, an infinitely flexible space to create your own interactive software. MaxMSP enables musicians and producers to connect ideas together to create software built around you, in the moment, exploring sound without limits.</li>
                     </ul>
                 </div>
             </div>
