--- a/pages/projects/corkino.html
+++ b/pages/projects/corkino.html
@@ -210,6 +210,7 @@
  <script src="https://www.gabrielavelitch.com/assets/dropdown/js/navbar-dropdown.js"></script>
  <script src="https://www.gabrielavelitch.com/assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>
  <script src="https://www.gabrielavelitch.com/assets/theme/js/script.js"></script>
+ <script src="https://www.gabrielavelitch.com/assets/mbr-tabs/mbr-tabs.js"></script>  
 
 
   </body>
