--- a/pages/maxmsp/gen_svf.html
+++ b/pages/maxmsp/gen_svf.html
@@ -38,10 +38,10 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="https://www.gabrielavelitch.com/index.html">
-                        <img src="https://www.gabrielavelitch.com/assets/images/favicon-96x96.png" alt="Mobirise" style="height: 3rem;">
+                        <img src="https://www.gabrielavelitch.com/assets/images/favicon-96x96.png" alt="" style="height: 3rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white text-primary display-4" href="index.html">Gabriela Velitch</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white text-primary display-4" href="https://www.gabrielavelitch.com/index.html">Gabriela Velitch</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -81,8 +81,8 @@
             <div class="col-md-12 col-lg-8">
 
 
-                <p class="mbr-text mbr-fonts-style display-7"><strong>
-                    State Variable Filter</strong> - this filter implements some onepole filters correlated between them that produce lowpass, highpass, bandpass, and notch output simultaneously.</p>
+                <p class="mbr-text mbr-fonts-style display-7">
+                  <strong>State Variable Filter</strong> - this filter implements some onepole filters correlated between them that produce lowpass, highpass, bandpass, and notch output simultaneously.</p>
             </div>
         </div>
     </div>
