--- a/pages/maxmsp/gen_svf.html
+++ b/pages/maxmsp/gen_svf.html
@@ -142,7 +142,7 @@
                             <span class="mbr-iconfont mbr-iconfont-social socicon-instagram socicon" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
                         </a>
                     </div><div class="soc-item">
-                        <a href="https://www.youtube.com/c/mobirise" target="_blank">
+                        <a href="https://www.linkedin.com/in/gabriela-velitch-5766991b2/" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-linkedin socicon" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
                         </a>
                     </div></div>
