--- a/pages/projects/corkino.html
+++ b/pages/projects/corkino.html
@@ -187,19 +187,20 @@
                             <span class="mbr-iconfont mbr-iconfont-social socicon-instagram socicon" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
                         </a>
                     </div><div class="soc-item">
-                        <a href="https://www.linkedin.com/in/gabriela-velitch-5766991b2/" target="_blank">
+                        <a href="https://www.youtube.com/c/mobirise" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-linkedin socicon" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
                         </a>
                     </div></div>
             </div>
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-4">
-                    <a href="https://www.gabrielavelitch.com/index.html#header13-1" class="text-primary">© Gabriela Velitch 2022.</a></p>
+                    <a href="https://www.linkedin.com/in/gabriela-velitch-5766991b2/" class="text-primary">© Gabriela Velitch 2022.</a></p>
             </div>
         </div>
     </div>
 </section>
 
+<section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/n" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Mobirise website creator - <a href="https://mobirise.site/o" style="color:#aaa;">More here</a></p></section>
 
 
  <script src="https://www.gabrielavelitch.com/assets/bootstrap/js/bootstrap.bundle.min.js"></script>
