--- a/pages/maxmsptools.html
+++ b/pages/maxmsptools.html
@@ -159,15 +159,15 @@
 
 
                 <div class="soc-item">
-                        <a href="https://twitter.com/mobirise" target="_blank">
+                        <a href="https://github.com/Velitch" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-github socicon" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
                         </a>
                     </div><div class="soc-item">
-                        <a href="https://www.facebook.com/pages/Mobirise/1616226671953247" target="_blank">
+                        <a href="https://instagram.com/velitch?utm_medium=copy_link" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-instagram socicon" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
                         </a>
                     </div><div class="soc-item">
-                        <a href="https://www.youtube.com/c/mobirise" target="_blank">
+                        <a href="https://www.linkedin.com/in/gabriela-velitch-5766991b2/" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-linkedin socicon" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
                         </a>
                     </div></div>
