--- a/pages/maxmsp/gen_onepole.html
+++ b/pages/maxmsp/gen_onepole.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
 
 
-  <title>MaxMSP</title>
+  <title>gen~ svf</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -31,7 +31,7 @@
 </head>
 <body>
 
-  <section data-bs-version="5.1" class="menu menu2 cid-sYseAX4x5N" once="menu" id="menu2-h">
+  <section data-bs-version="5.1" class="menu menu2 cid-sYseAX4x5N" once="menu" id="menu2-19">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
         <div class="container">
@@ -60,88 +60,63 @@
     </nav>
 </section>
 
-<section data-bs-version="5.1" class="info3 cid-sYziZKN79U mbr-parallax-background" id="info3-1i">
+<section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="content4-1b">
 
-
-
-    <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(0, 0, 0);">
-    </div>
 
     <div class="container">
         <div class="row justify-content-center">
-            <div class="card col-12 col-lg-10">
-                <div class="card-wrapper">
-                    <div class="card-box align-center">
-                        <h4 class="card-title mbr-fonts-style align-center mb-4 display-2"><strong>MAXMSP</strong></h4>
+            <div class="title col-md-12 col-lg-10">
+                <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">MaxMSP Tools</h3>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>gen~ onepole</strong></h4>
+
+            </div>
+        </div>
+    </div>
+</section>
+
+<section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-12 col-lg-8">
 
 
-                    </div>
+                <p class="mbr-text mbr-fonts-style display-7">
+                  <strong>Onepole</strong> - the filter has a pole at Z = -a1 , in the Z plane (and a zero at Z = 0). Notice that the one-pole exhibits either a lowpass or a highpass frequency response, like the one-zero. The lowpass character occurs when the pole is near the point Z = 1, which happens when a_1 approaches -1. Conversely, the highpass nature occurs when a_1 is positive.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section data-bs-version="5.1" class="image3 cid-sYxSA7pHRT" id="image3-1c">
+
+
+
+
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-12 col-lg-6">
+                <div class="image-wrapper">
+                    <img src="https://www.gabrielavelitch.com/assets/images/gen-onepole.gif" alt="onepole">
+
                 </div>
             </div>
         </div>
     </div>
 </section>
 
-<section data-bs-version="5.1" class="content17 cid-sYzj9koTFS" id="content17-1j">
-
-
-
-
+<section data-bs-version="5.1" class="content11 cid-sYxUmQ9Po6" id="content11-1e">
 
     <div class="container">
-
-            <div class="row justify-content-center">
-                <div class="col-12 col-md-10">
-
-
-                    <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content">
-                        <div class="card mb-3">
-                            <div class="card-header" role="tab" id="headingOne">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse1_2" aria-expanded="false" aria-controls="collapse1">
-                                    <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Filters</strong></h6>
-                                    <span class="sign mbr-iconfont mbri-arrow-down"></span>
-                                </a>
-                            </div>
-                            <div id="collapse1_2" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
-                                <div class="panel-body">
-                                    <p class="mbr-fonts-style panel-text display-7"><strong>- filter library
-<br>- gen~ allpass
-<br>-&nbsp;gen~ biquad
-<br>-&nbsp;gen~ combfilter
-<br>-&nbsp;gen~ FIR
-<br>-&nbsp;gen~ IIR
-<br>-&nbsp;gen~ IIR vs FIR
-<br>-&nbsp;<a href="https://www.gabrielavelitch.com/pages/maxmsp/gen_onepole.html" class="text-primary"><b>gen~ onepole</b></a></strong><br></p>
-<br>-&nbsp;<a href="https://www.gabrielavelitch.com/pages/maxmsp/gen_svf.html" class="text-primary"><b>gen~ svf</b></a></strong><br></p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card mb-3">
-                            <div class="card-header" role="tab" id="headingTwo">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse2_2" aria-expanded="false" aria-controls="collapse2">
-                                    <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Reverbs</strong></h6>
-                                    <span class="sign mbr-iconfont mbri-arrow-down"></span>
-                                </a>
-
-                            </div>
-                            <div id="collapse2_2" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
-                                <div class="panel-body">
-                                    <p class="mbr-fonts-style panel-text display-7"><strong>- gen~ freeverb
-<br>- gen~ schroeder JCRev</strong></p>
-                                </div>
-                            </div>
-                        </div>
-
-
-
-
-                    </div>
-                </div>
+        <div class="row justify-content-center">
+            <div class="col-md-12 col-lg-10">
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/downloads/maxmsp/svf.zip"><span class="mobi-mbri mobi-mbri-download mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span>gen~ svf.maxpat (5KB)</a></div>
             </div>
         </div>
+    </div>
 </section>
 
-<section data-bs-version="5.1" class="footer3 cid-sYsmn2ZqhN mbr-reveal" once="footers" id="footer3-i">
+<section data-bs-version="5.1" class="footer3 cid-sYsmn2ZqhN mbr-reveal" once="footers" id="footer3-1a">
 
 
 
@@ -178,19 +153,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/r" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a>
-  <p style="flex: 0 0 auto; margin:0; padding-right:1rem;"></p>
-
 </section>
-
- <script src="https://www.gabrielavelitch.com/assets/bootstrap/js/bootstrap.bundle.min.js"></script>
- <script src="https://www.gabrielavelitch.com/assets/parallax/jarallax.js"></script>
- <script src="https://www.gabrielavelitch.com/assets/smoothscroll/smooth-scroll.js"></script>
- <script src="https://www.gabrielavelitch.com/assets/ytplayer/index.js"></script>
- <script src="https://www.gabrielavelitch.com/assets/dropdown/js/navbar-dropdown.js"></script>
- <script src="https://www.gabrielavelitch.com/assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>
- <script src="https://www.gabrielavelitch.com/assets/theme/js/script.js"></script>
-
 
   </body>
 </html>
