--- a/pages/maxmsptools.html
+++ b/pages/maxmsptools.html
@@ -127,8 +127,13 @@
                             </div>
                             <div id="collapse2_2" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                                 <div class="panel-body">
-                                    <p class="mbr-fonts-style panel-text display-7"><strong>- gen~ freeverb
-<br>- gen~ schroeder JCRev</strong></p>
+                                    <p class="mbr-fonts-style panel-text display-7">
+                                      <strong>
+                                        - gen~ freeverb
+                                        <br>
+                                        - gen~ schroeder JCRev
+                                      </strong>
+                                      </p>
                                 </div>
                             </div>
                         </div>
