--- a/pages/maxmsptools.html
+++ b/pages/maxmsptools.html
@@ -107,10 +107,10 @@
                                     <p class="mbr-fonts-style panel-text display-7">
               <strong>
                 - filter library
-<br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/gen_onepole.html" class="text-primary"><b>gen~ allpass</b></a></strong><br></p>
-<br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/gen_onepole.html" class="text-primary"><b>gen~ biquad</b></a></strong><br></p>
-<br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/gen_onepole.html" class="text-primary"><b>gen~ combfilter</b></a></strong><br></p>
-<br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/gen_onepole.html" class="text-primary"><b>gen~ FIR</b></a></strong><br></p>
+<br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/gen_onepole.html" class="text-primary"><b>gen~ allpass</b></a></strong><br>
+<br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/gen_onepole.html" class="text-primary"><b>gen~ biquad</b></a></strong><br>
+<br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/gen_onepole.html" class="text-primary"><b>gen~ combfilter</b></a></strong><br>
+<br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/gen_onepole.html" class="text-primary"><b>gen~ FIR</b></a></strong><br>
 <br>-&nbsp;<a href="https://www.gabrielavelitch.com/pages/maxmsp/gen_onepole.html" class="text-primary"><b>gen~ IIR</b></a></strong><br></p>
 <br>-&nbsp;<a href="https://www.gabrielavelitch.com/pages/maxmsp/gen_onepole.html" class="text-primary"><b>gen~ IIR vs FIR</b></a></strong><br></p>
 <br>-&nbsp;<a href="https://www.gabrielavelitch.com/pages/maxmsp/gen_onepole.html" class="text-primary"><b>gen~ onepole</b></a></strong><br></p>
