--- a/pages/maxmsptools.html
+++ b/pages/maxmsptools.html
@@ -107,14 +107,14 @@
                                     <p class="mbr-fonts-style panel-text display-7">
               <strong>
                 - filter library
-<br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/gen_onepole.html" class="text-primary"><b>gen~ allpass</b></a></strong><br>
-<br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/gen_onepole.html" class="text-primary"><b>gen~ biquad</b></a></strong><br>
-<br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/gen_onepole.html" class="text-primary"><b>gen~ combfilter</b></a></strong><br>
-<br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/gen_onepole.html" class="text-primary"><b>gen~ FIR</b></a></strong><br>
-<br>-&nbsp;<a href="https://www.gabrielavelitch.com/pages/maxmsp/gen_onepole.html" class="text-primary"><b>gen~ IIR</b></a></strong><br></p>
-<br>-&nbsp;<a href="https://www.gabrielavelitch.com/pages/maxmsp/gen_onepole.html" class="text-primary"><b>gen~ IIR vs FIR</b></a></strong><br></p>
-<br>-&nbsp;<a href="https://www.gabrielavelitch.com/pages/maxmsp/gen_onepole.html" class="text-primary"><b>gen~ onepole</b></a></strong><br></p>
-<br>-&nbsp;<a href="https://www.gabrielavelitch.com/pages/maxmsp/gen_svf.html" class="text-primary"><b>gen~ svf</b></a></strong><br></p>
+<br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/allpass.html" class="text-primary"><b>allpass</b></a></strong><br>
+<br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/biquad.html" class="text-primary"><b>biquad</b></a></strong><br>
+<br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/combfilter.html" class="text-primary"><b>combfilter</b></a></strong><br>
+<br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/comb_iir.html" class="text-primary"><b>FIR</b></a></strong><br>
+<br>-&nbsp;<a href="https://www.gabrielavelitch.com/pages/maxmsp/comb_iir.html" class="text-primary"><b>IIR</b></a></strong><br></p>
+<br>-&nbsp;<a href="https://www.gabrielavelitch.com/pages/maxmsp/comb_iir_vs_fir.html" class="text-primary"><b>IIR vs FIR</b></a></strong><br></p>
+<br>-&nbsp;<a href="https://www.gabrielavelitch.com/pages/maxmsp/onepole.html" class="text-primary"><b>onepole</b></a></strong><br></p>
+<br>-&nbsp;<a href="https://www.gabrielavelitch.com/pages/maxmsp/svf.html" class="text-primary"><b>svf</b></a></strong><br></p>
                                 </div>
                             </div>
                         </div>
