--- a/pages/maxmsptools.html
+++ b/pages/maxmsptools.html
@@ -106,15 +106,15 @@
                                 <div class="panel-body">
                                     <p class="mbr-fonts-style panel-text display-7">
               <strong>
-                - filter library
-<br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/allpass.html" class="text-primary"><b>allpass</b></a></strong><br>
-<br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/biquad.html" class="text-primary"><b>biquad</b></a></strong><br>
-<br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/combfilter.html" class="text-primary"><b>combfilter</b></a></strong><br>
-<br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/comb_iir.html" class="text-primary"><b>FIR</b></a></strong><br>
-<br>-&nbsp;<a href="https://www.gabrielavelitch.com/pages/maxmsp/comb_iir.html" class="text-primary"><b>IIR</b></a></strong><br></p>
-<br>-&nbsp;<a href="https://www.gabrielavelitch.com/pages/maxmsp/comb_iir_vs_fir.html" class="text-primary"><b>IIR vs FIR</b></a></strong><br></p>
-<br>-&nbsp;<a href="https://www.gabrielavelitch.com/pages/maxmsp/onepole.html" class="text-primary"><b>onepole</b></a></strong><br></p>
-<br>-&nbsp;<a href="https://www.gabrielavelitch.com/pages/maxmsp/svf.html" class="text-primary"><b>svf</b></a></strong><br></p>
+<br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/filter_library.html" class="text-primary"><b>filter library</b></a>
+<br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/allpass.html" class="text-primary"><b>allpass</b></a>
+<br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/biquad.html" class="text-primary"><b>biquad</b></a>
+<br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/combfilter.html" class="text-primary"><b>combfilter</b></a>
+<br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/comb_iir.html" class="text-primary"><b>FIR</b></a>
+<br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/comb_iir.html" class="text-primary"><b>IIR</b></a>
+<br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/comb_iir_vs_fir.html" class="text-primary"><b>IIR vs FIR</b></a>
+<br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/onepole.html" class="text-primary"><b>onepole</b></a>
+<br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/svf.html" class="text-primary"><b>svf</b></a></strong>
                                 </div>
                             </div>
                         </div>
